[package]
name = "ftdc"
version = "0.1.3"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
description = "Crate to download ftdc data for mongodb clusters."
documentation = "https://docs.rs/ftdc"
readme = "README_LIB.md"
keywords = ["mongodb", "ftdc", "profiling"]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT"
repository = "https://github.com/maoertel/mongodb-ftdc"

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
futures = "0.3"

reqwest = { version = "0.11", features = ["json"] }
diqwest = "1.1"
http = "0.2"

indicatif = "0.17"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.0", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "0.31"

[features]
build-binary = ["tokio", "clap"]

[lib]
name = "ftdc"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "ftdc"
path = "src/main.rs"
doc = false
required-features = ["build-binary"] 
