[package]
name = "ftdc"
version = "0.1.4"
edition = "2024"
authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
description = "Crate to download ftdc data for mongodb clusters."
documentation = "https://docs.rs/ftdc"
readme = "README_LIB.md"
keywords = ["mongodb", "ftdc", "profiling"]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT"
repository = "https://github.com/maoertel/mongodb-ftdc"

[dependencies]
async-recursion = "1.1"
async-trait = "0.1"
futures = "0.3"

reqwest = { version = "0.13", features = ["json"] }
diqwest = "3.2"
http = "1.4"

indicatif = "0.18"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5", features = ["derive", "env"], optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
mockito = "1.7"

[features]
build-binary = ["tokio", "clap"]

[lib]
name = "ftdc"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "ftdc"
path = "src/main.rs"
doc = false
required-features = ["build-binary"] 
